Modularize, bring up a level, and add experimental packaging